# bagents

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: release-please.yml
config/: backend_dev.md  devops_dev.md  frontend_dev.md  reviewer.md  team_lead.md
src/: config.rs  hello.rs  main.rs  orchestrator.rs  prompts.rs
src/clients/: llm_client.rs
src/helpers/: helper_output.rs  mod.rs  path_safety.rs
src/models/: developer_response.rs  file_modification.rs  issue.rs  mod.rs  reviewer_response.rs  teamlead_response.rs
src/services/: file_system.rs  forgejo.rs  git_local.rs  github.rs  gitlab.rs  jira.rs  mod.rs  semantic.rs  traits.rs
