[package]\nname = \"bagents\"\nversion = \"0.1.0\"\nedition = \"2024\"\n\n[dependencies]\ndotenv = \"0.15.0\"\noctocrab = \"0.49.5\"\nreqwest = {version = \"0.13.2\", features = [\"json\"] }\nrustls = \"0.23.37\"\nserde = {version = \"1.0.228\", features = [\"derive\"] }\nserde_json = \"1.0.149\"\ntokio = {version = \"1.50.0\", features = [\"full\"] }\nlog = \"0.4\"\nenv_logger = \"0.10\"\n