[package]
name = "bagents"
version = "0.1.0"
type = "bin"

[dependencies]
log = "0.4.14"
env_logger = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
telegram-bot = "0.16.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
regex = "1.5.4"
chrono = { version = "0.4.19", features = ["serde"] }

[dev-dependencies]
assert_cmd = "1.0.3"

[build-dependencies]

[profile.release]
opt-level = "s"
test = false

[workspace]
members = []